added neumorphic design

--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,102 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600;700;900&display=swap");
+
+/* LIGHT THEME */
+:root {
+  --bg-main: #e8e8e8;
+  --shadow-light: #d5d5d5;
+  --shadow-dark: #fbfbfb;
+
+  --text-primary: rgba(34, 48, 74, 1);
+  --text-secondary: rgba(34, 48, 74, 1);
+  --text-tertiary: rgba(34, 48, 74, 1);
+
+  --text-shadow-primary: rgba(137, 148, 165, 0.7);
+}
+
+/* DARK THEME VARIABLES */
+.dark {
+  --bg-main: #35393b;
+  --shadow-light:#2d3032 ;
+  --shadow-dark: #3d4244;
+
+  --text-primary:beige;
+  --text-secondary: beige;
+  --text-tertiary: beige;
+}
+
 * {
   margin: 0;
   padding: 0;
+}
+
+body {
+  background-color: var(--bg-main);
+  font-family: "Montserrat", sans-serif;
+  color: var(--text-primary);
+}
+
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  border-radius: 0px;
+background: var(--bg-main);
+box-shadow: inset 5px 5px 10px var(--shadow-light), 
+            inset -5px -5px px var(--shadow-dark);
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+  border-radius: 5px;
+  background: var(--bg-main);
+  box-shadow: 5px 5px 10px var(--shadow-light), 
+            -5px -5px 10px var(--shadow-dark);
 }
 
 a {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6, p, span, li {
-  font-family: "Montserrat", sans-serif;
+h1, h2, h3, h4, h5, h6 {
+  text-shadow: 1px 1px 10px var(--text-shadow-primary);
+  color: var(--text-primary);
+}
+
+h1 {
+  font-size: 6rem;
+  font-weight: 900;
+}
+
+h2 {
+  font-size: 5rem;
+  font-weight: 900;
+}
+
+h3 {
+  font-size: 4rem;
+  font-weight: 700;
+}
+
+h4 {
+  font-size: 3rem;
+  font-weight: 700;
+}
+
+h5 {
+  font-size: 1.5rem;
+  font-weight: 500;
+}
+
+h6 {
+  font-size: 1rem;
+  font-weight: 500;
+}
+
+p {
+  font-size: 1rem;
 }
 
 #logo {
@@ -19,8 +106,8 @@ h1, h2, h3, h4, h5, h6, p, span, li {
 
 .nav-bar {
   display: flex;
+  padding: 1rem 3rem;
   flex-direction: row;
-  box-shadow: 0 2px 8px 4px rgba(0, 0, 0, 0.05);
 }
 
 .nav-menu {
@@ -30,33 +117,52 @@ h1, h2, h3, h4, h5, h6, p, span, li {
 }
 
 .nav-menu-item {
+  margin: 2rem;
   padding: 1rem 2rem;
-}
+  border-radius: 4px;
+  background: var(--bg-main);
+  box-shadow: 5px 5px 10px var(--shadow-light), 
+  -5px -5px 10px var(--shadow-dark);}
 
-.light {
-  color: white;
+.nav-menu-item > a {
+  color: var(--text-primary);
 }
 
 .cover {
-  background-image: url("/images/cover.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
-  height: 100vh;
+  height: 75vh;
 }
 
 #cover-content {
-  width: 100vw;
+  height: 50vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
 .section {
-  min-height: 100vh;
+  padding: 5% 2%;
+  display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 .half-section {
   min-height: 50vh;
+}
+
+.card {
+  margin: 2rem;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  background: var(--bg-main);
+  box-shadow: 5px 5px 10px var(--shadow-light), 
+  -5px -5px 10px var(--shadow-dark);}
 }
 
 /*# sourceMappingURL=styles.css.map */
