added responsive navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,13 +2,22 @@
 
 /* LIGHT THEME */
 :root {
-  --bg-main: #e8e8e8;
+  --bg-main: #35393b;
+  --shadow-light: #2d3032;
+  --shadow-dark: #3d4244;
+
+  --text-primary: #fefefe;
+  --text-secondary: beige;
+  --text-tertiary: beige;
+  --text-disabled: #989898;
+
+  /* --bg-main: #e8e8e8;
   --shadow-light: #d5d5d5;
   --shadow-dark: #fbfbfb;
 
   --text-primary: rgba(34, 48, 74, 1);
   --text-secondary: rgba(34, 48, 74, 1);
-  --text-tertiary: rgba(34, 48, 74, 1);
+  --text-tertiary: rgba(34, 48, 74, 1); */
 
   --text-shadow-primary: rgba(137, 148, 165, 0.7);
 }
@@ -16,10 +25,10 @@
 /* DARK THEME VARIABLES */
 .dark {
   --bg-main: #35393b;
-  --shadow-light:#2d3032 ;
+  --shadow-light: #2d3032;
   --shadow-dark: #3d4244;
 
-  --text-primary:beige;
+  --text-primary: beige;
   --text-secondary: beige;
   --text-tertiary: beige;
 }
@@ -35,34 +44,30 @@ body {
   color: var(--text-primary);
 }
 
-/* width */
-::-webkit-scrollbar {
-  width: 10px;
-}
-
-/* Track */
-::-webkit-scrollbar-track {
-  border-radius: 0px;
-background: var(--bg-main);
-box-shadow: inset 5px 5px 10px var(--shadow-light), 
-            inset -5px -5px px var(--shadow-dark);
-}
-
-/* Handle */
-::-webkit-scrollbar-thumb {
-  border-radius: 5px;
-  background: var(--bg-main);
-  box-shadow: 5px 5px 10px var(--shadow-light), 
-            -5px -5px 10px var(--shadow-dark);
-}
-
 a {
   text-decoration: none;
 }
 
-h1, h2, h3, h4, h5, h6 {
-  text-shadow: 1px 1px 10px var(--text-shadow-primary);
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   color: var(--text-primary);
+}
+
+.card-elevated {
+  box-shadow: 2px 2px 6px var(--shadow-light), -2px -2px 6px var(--shadow-dark);
+}
+
+.card-sunken {
+  box-shadow: 5px 5px 10px inset var(--shadow-light),
+    -5px -5px 10px inset var(--shadow-dark);
+}
+
+.text-elevated {
+  text-shadow: 1px 1px 10px var(--text-shadow-primary);
 }
 
 h1 {
@@ -100,32 +105,87 @@ p {
 }
 
 #logo {
+  margin-top: -6px;
+  margin-left: 40px;
   height: fit-content;
-  align-items: center;
 }
 
 .nav-bar {
-  display: flex;
-  padding: 1rem 3rem;
-  flex-direction: row;
+  max-height: 48px;
+  display: absolute;
 }
 
 .nav-menu {
-  align-items: center;
+  float: right;
   display: flex;
+  flex-direction: row;
   list-style: none;
 }
 
 .nav-menu-item {
-  margin: 2rem;
   padding: 1rem 2rem;
   border-radius: 4px;
-  background: var(--bg-main);
-  box-shadow: 5px 5px 10px var(--shadow-light), 
-  -5px -5px 10px var(--shadow-dark);}
+  font-size: 1rem;
+  font-weight: 600;
+}
 
 .nav-menu-item > a {
+  color: var(--text-disabled);
+}
+
+.menu-selected > a {
   color: var(--text-primary);
+}
+
+.nav-bar .icon {
+  float: left;
+  display: none;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.nav-bar .icon:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.nav-bar .icon.active {
+  background-color: #4caf50;
+  color: white;
+}
+
+.nav-bar .icon {
+  display: none;
+}
+
+@media screen and (max-width: 950px) {
+  .nav-bar li:not(:first-child) {
+    display: none;
+  }
+  .nav-bar .icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .nav-bar .responsive {
+    flex-direction: column;
+    position: relative;
+  }
+  .nav-bar .responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .nav-bar .responsive li {
+    float: none;
+    display: block;
+    text-align: left;
+  }
 }
 
 .cover {
@@ -143,13 +203,13 @@ p {
 .section {
   padding: 5% 2%;
   display: -webkit-box;
-    display: -moz-box;
-    display: -ms-flexbox;
-    display: -webkit-flex;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+  display: -moz-box;
+  display: -ms-flexbox;
+  display: -webkit-flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .half-section {
@@ -161,8 +221,8 @@ p {
   padding: 1rem 2rem;
   border-radius: 4px;
   background: var(--bg-main);
-  box-shadow: 5px 5px 10px var(--shadow-light), 
-  -5px -5px 10px var(--shadow-dark);
+  box-shadow: 5px 5px 10px var(--shadow-light),
+    -5px -5px 10px var(--shadow-dark);
 }
 
 .table {
@@ -175,7 +235,8 @@ p {
   flex-direction: row;
 }
 
-.input:focus, .input:active {
+.input:focus,
+.input:active {
   background-color: transparent;
 }
 
@@ -183,7 +244,6 @@ p {
   border: none;
   outline: none;
 }
-
 
 /* WORK */
 
@@ -196,11 +256,10 @@ p {
   font-weight: 600;
 }
 
-
 /* ACHIEVEMENTS AND CERTIFICATIONS */
 
 /* EDUCATION */
-.content-education> td{
+.content-education > td {
   padding-top: 3rem;
 }
 
@@ -215,8 +274,6 @@ p {
 .content-education-left {
   text-align: end;
 }
-
-
 
 /* CONTACT */
 
