--- a/css/styles.css
+++ b/css/styles.css
@@ -379,7 +379,58 @@ section {
 }
 
 .skills-languages-container {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  border-radius: 10px;
   width: 100%;
   display: flex;
-  padding: 2rem;
+  flex-direction: row;
+}
+
+.skills-languages-row-lg {
+  display: flex;
+  flex-grow: 1;
+  flex-direction: row;
+}
+
+@media screen and (max-width: 1250px) {
+  .skills-languages-container {
+    flex-direction: column;
+  }
+  .skills-languages-row-lg {
+    flex-direction: column;
+  }
+}
+
+.skills-languages-card {
+  padding: 1rem;
+  margin: 2rem 1rem 2rem 1rem;
+  flex-grow: 1;
+  border-radius: 12px;
+}
+
+.skills-languages-card p {
+  margin-top: 1.5rem;
+}
+
+.skills-tools {
+  margin-top: 1.5rem;
+  width: 100%;
+}
+
+.skills-tools-heading {
+  margin-bottom: 1rem;
+}
+
+.skills-tools-container {
+  border-radius: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+}
+
+.tool-name {
+  align-self: center;
+  margin: 2.5rem 2.5rem 3rem 3rem;
 }
