--- a/css/styles.css
+++ b/css/styles.css
@@ -597,12 +597,23 @@ section {
   margin-top: 3rem;
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  align-content: center;
+}
+
+.contact-form-container form {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 
 .form-input {
   border-radius: 8px;
   margin-bottom: 0.75rem;
   padding: 1rem;
+  width: 100%;
   background-color: var(--bg-main);
   border: none;
 }
