--- a/css/styles.css
+++ b/css/styles.css
@@ -495,17 +495,34 @@ section {
 .my-works-container {
   padding: 2rem;
   border-radius: 10px;
+  display: grid;
+  width: 100%;
+  gap: 2rem;
+  grid-template-columns: repeat(2, 1fr);
+}
+.work-container {
+  display: grid;
+  width: 100%;
+  gap: 1rem;
+}
+.work-container-left {
+  grid-template-columns: 200px 1fr;
 }
 
-.work-container {
-  display: flex;
-  flex-direction: row;
+.work-container-right {
+  grid-template-columns: 1fr 200px;
 }
 
 .my-work-info-container {
+  width: 100%;
   display: flex;
   flex-direction: column;
 }
+
+.works-heading {
+  margin-bottom: 1.25rem;
+}
+
 .work-container:nth-child(odd) .my-work-info-container {
   align-items: flex-start;
   margin-left: 1rem;
@@ -582,6 +599,7 @@ section {
 .achievements-container {
   padding: 2rem;
   border-radius: 10px;
+  width: 100%;
 }
 
 /* CONTACT */
