fixed margins of boxes

--- a/css/styles.css
+++ b/css/styles.css
@@ -577,21 +577,22 @@ section {
   border-radius: 10px;
   display: grid;
   width: 100%;
+  padding: 2rem;
+  box-sizing: border-box;
+
   gap: 2rem;
   grid-template-columns: repeat(2, 1fr);
 }
 .work-container {
-  margin: 2rem;
-  display: grid;
+  display: flex;
   width: 100%;
-  gap: 1rem;
 }
-.work-container-left {
-  grid-template-columns: 5rem 1fr;
+.work-container-left .my-works-img {
+  margin-right: 2rem;
 }
 
-.work-container-right {
-  grid-template-columns: 1fr 5rem;
+.work-container-right .my-works-img {
+  margin-left: 2rem;
 }
 
 .my-work-info-container {
@@ -637,6 +638,7 @@ section {
 }
 
 .work-experience-container {
+  box-sizing: border-box;
   padding-left: 1rem;
   padding-right: 1rem;
   border-radius: 10px;
@@ -680,6 +682,7 @@ section {
 }
 
 .achievements-container {
+  box-sizing: border-box;
   border-radius: 10px;
   margin-top: 2rem;
   padding-left: 1rem;
@@ -723,6 +726,7 @@ section {
 
 .education-container {
   border-radius: 10px;
+  box-sizing: border-box;
   margin-top: 2rem;
   padding-left: 1rem;
   padding-right: 1rem;
